--- a/src/pages/totaalstand/totaalstand.html
+++ b/src/pages/totaalstand/totaalstand.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-navbar>
+  <ion-navbar color="primary">
     <button ion-button icon-only menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
@@ -11,7 +11,7 @@
 
 <ion-content padding>
   <ion-list>
-    <button ion-item *ngFor="let line of totaalstand?.deelnemers" (click)="goToDetails(line.Name)">
+    <button ion-item *ngFor="let line of totaalstand?.deelnemers" (click)="goToDetails(line)">
      {{line.Positie}} {{line.Name}} {{line.TotalScore}}
     </button>
   </ion-list>
