--- a/src/pages/totaalstand-details/totaalstand-details.html
+++ b/src/pages/totaalstand-details/totaalstand-details.html
@@ -14,32 +14,37 @@
 
 
 <ion-content padding color="light">
-  <ion-card color="primary">
-
-    <ion-card-content>
+  <ion-list>
+    <ion-item color="primary">
       {{totaalstandregel.Name}} staat {{totaalstandregel.Positie}}e met {{totaalstandregel.TotalScore}} punten <br>
       <h5>Team: {{totaalstandregel.TotalTeamScore}} -
         Wedstrijden: {{totaalstandregel.TotalMatchesScore}} -
         Vragen: {{totaalstandregel.TotalQuestionsScore}}
       </h5>
-    </ion-card-content>
+    </ion-item>
+  </ion-list>
 
-  </ion-card>
-
-  <ion-card>
-
-    <ion-card-content>
+  <ion-list>
+    <ion-item>
       <ion-row>
-        <ion-col width-50>Naam</ion-col>
-        <ion-col width-50>Totaal</ion-col>
+        <ion-col width-20>Club</ion-col>
+        <ion-col width-60>Naam
+        </ion-col>
+        <ion-col width-20>Totaal</ion-col>
       </ion-row>
-      <ion-row *ngFor="let line of totaalstandregel.TeamScores">
-        <ion-col width-50>{{line.Name}}</ion-col>
-        <ion-col width-50>{{line.TotalScore}}</ion-col>
+    </ion-item>
+    <ion-item text-wrap *ngFor="let line of totaalstandregel.TeamScores">
+      <ion-row>
+        <ion-col width-20>
+          <img class="clubicon" [src]="'assets/clubicons/'+ line.Team + '.png'">
+        </ion-col>
+        <ion-col width-60>
+          {{line.Name}}
+        <span color="light">({{line.Position}})</span></ion-col>
+        <ion-col width-20>{{line.TotalScore}}</ion-col>
       </ion-row>
-    </ion-card-content>
+    </ion-item>
+  </ion-list>
 
-  </ion-card>
 
 </ion-content>
-
