--- a/src/pages/totaalstand/totaalstand.html
+++ b/src/pages/totaalstand/totaalstand.html
@@ -4,16 +4,33 @@
       <ion-icon name="menu"></ion-icon>
     </button>
     <ion-title>
-      Totaal stand
+      Totaalstand
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
   <ion-list>
-    <button ion-item *ngFor="let line of totaalstand?.deelnemers" (click)="goToDetails(line)">
-     {{line.Positie}} {{line.Name}} {{line.TotalScore}}
-    </button>
+    <ion-item color="primary">
+      <ion-row>
+        <ion-col width-20>Pos.</ion-col>
+        <ion-col width-60>Naam</ion-col>
+        <ion-col width-20>Punten</ion-col>
+      </ion-row>
+    </ion-item>
+    <ion-item text-wrap *ngFor="let line of totaalstand?.deelnemers" (click)="goToDetails(line)">
+      <ion-row>
+        <ion-col width-20>
+          <ion-icon color="up" *ngIf="line.Positie < line.previousPositie" ios="md-arrow-up" md="md-arrow-up"></ion-icon>
+          <ion-icon color="down" *ngIf="line.Positie > line.previousPositie" ios="md-arrow-down" md="md-arrow-down"></ion-icon>
+          <ion-icon color="light" *ngIf="line.Positie === line.previousPositie" ios="md-remove" md="md-remove"></ion-icon>
+          {{line.Positie}}
+        </ion-col>
+
+        <ion-col width-60>{{line.Name}}</ion-col>
+        <ion-col width-20> {{line.TotalScore}}</ion-col>
+      </ion-row>
+    </ion-item>
   </ion-list>
 </ion-content>
 
