--- a/src/pages/totaalstand/totaalstand.html
+++ b/src/pages/totaalstand/totaalstand.html
@@ -5,6 +5,7 @@
     </button>
     <ion-title>
       Totaalstand
+      {{laatsteupdate?.updatedAt | date:'dd/MM HH:mm'}}
     </ion-title>
   </ion-navbar>
 </ion-header>
