--- a/src/pages/totaalstand-details/totaalstand-details.html
+++ b/src/pages/totaalstand-details/totaalstand-details.html
@@ -13,9 +13,9 @@
 </ion-header>
 
 
-<ion-content ion-text padding color="light">
+<ion-content>
   <ion-list>
-    <ion-item color="primary">
+    <ion-item>
       {{totaalstandregel.Name}} staat {{totaalstandregel.Positie}}e met {{totaalstandregel.TotalScore}} punten <br>
       <h5>Team: {{totaalstandregel.TotalTeamScore}} -
         Wedstrijden: {{totaalstandregel.TotalMatchesScore}} -
@@ -25,7 +25,7 @@
   </ion-list>
 
   <ion-list>
-    <ion-item>
+    <ion-item color="secondary">
       <ion-row>
         <ion-col width-20>Club</ion-col>
         <ion-col width-60>Naam
