--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,4 +1,5 @@
-<ion-tabs ion-text  ion-text color="primary">
-  <ion-tab [root]="tab1Root" tabTitle="Totaalstand" tabIcon="podium"></ion-tab>
-  <ion-tab [root]="tab2Root" tabTitle="Teamstand" tabIcon="stats"></ion-tab>
+<ion-tabs ion-text color="primary">
+  <ion-tab [root]="tab1Root" tabTitle="Super 11" tabIcon="home"></ion-tab>
+  <ion-tab [root]="tab2Root" tabTitle="Totaalstand" tabIcon="podium"></ion-tab>
+  <ion-tab [root]="tab3Root" tabTitle="Teamstand" tabIcon="stats"></ion-tab>
 </ion-tabs>
