--- a/src/pages/totaalstand/totaalstand.html
+++ b/src/pages/totaalstand/totaalstand.html
@@ -6,7 +6,7 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
+<ion-content>
   <ion-refresher (ionRefresh)="doRefresh($event)">
     <ion-refresher-content pullingText="Laatste update {{laatsteupdate?.updatedAt | date:'dd/MM HH:mm'}}">
 
@@ -14,7 +14,7 @@
   </ion-refresher>
 
   <ion-list>
-        <ion-item color="primary">
+        <ion-item color="secondary">
           <ion-row>
             <ion-col width-20>Pos.</ion-col>
             <ion-col width-60>Naam</ion-col>
