--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,7 +7,7 @@
 </ion-header>
 
 <ion-content>
-  <ion-card color="secondary">
+  <ion-card>
     <ion-card-content>
       <h1>
         Voor het laatst geupdate
@@ -17,7 +17,7 @@
   </ion-card>
 
 
-  <ion-card color="secondary">
+  <ion-card>
     <ion-card-content>
       <h1>Nummer 1 totaalstand met {{nummereentotaalstand?.TotalScore}} punten
         {{nummereentotaalstand?.Name}}
@@ -25,7 +25,7 @@
     </ion-card-content>
   </ion-card>
 
-  <ion-card color="secondary">
+  <ion-card>
     <ion-card-content>
       <h1> Beste team in ronde {{nummereenteamstandlaatsteronde?.RoundId}} met
         {{nummereenteamstandlaatsteronde?.TotalTeamScore}} punten
