--- a/src/pages/totaalstand/totaalstand.html
+++ b/src/pages/totaalstand/totaalstand.html
@@ -13,7 +13,7 @@
     </ion-refresher-content>
   </ion-refresher>
 
-  <ion-list>
+  <ion-card>
         <ion-item color="secondary">
           <ion-row>
             <ion-col width-20>Pos.</ion-col>
@@ -37,6 +37,6 @@
             <ion-col width-20> {{line.TotalScore}}</ion-col>
           </ion-row>
         </ion-item>
-      </ion-list>
+      </ion-card>
 </ion-content>
 
