--- a/src/pages/teamstand/teamstand.html
+++ b/src/pages/teamstand/teamstand.html
@@ -12,7 +12,7 @@
 
     </ion-refresher-content>
   </ion-refresher>
-  <ion-list>
+  <ion-card>
     <ion-item color="secondary">
       <ion-row>
         <ion-col width-20>Pos.</ion-col>
@@ -20,7 +20,7 @@
         <ion-col width-20>Punten</ion-col>
       </ion-row>
     </ion-item>
-    <ion-item text-wrap *ngFor="let line of teamstand; let positie = index" (click)="goToDetails(line)">
+    <ion-item color="white" text-wrap *ngFor="let line of teamstand; let positie = index" (click)="goToDetails(line)">
       <ion-row>
         <ion-col width-20 *ngIf="line?.TotalTeamScore !== teamstand[positie-1]?.TotalTeamScore">
           {{positie + 1}}
@@ -32,6 +32,6 @@
         <ion-col width-20> {{line?.TotalTeamScore}}</ion-col>
       </ion-row>
     </ion-item>
-  </ion-list>
+  </ion-card>
 </ion-content>
 
