--- a/src/pages/teamstand/teamstand.html
+++ b/src/pages/teamstand/teamstand.html
@@ -16,11 +16,12 @@
     <ion-item color="secondary">
       <ion-row>
         <ion-col width-20>Pos.</ion-col>
-        <ion-col width-60>Naam</ion-col>
-        <ion-col width-20>Punten</ion-col>
+        <ion-col width-50>Naam</ion-col>
+        <ion-col width-30>Punten</ion-col>
       </ion-row>
     </ion-item>
     <ion-item color="white" text-wrap *ngFor="let line of teamstand; let positie = index" (click)="goToDetails(line)">
+      <ion-icon color="primary" item-right name="ios-arrow-dropright-outline"></ion-icon>
       <ion-row>
         <ion-col width-20 *ngIf="line?.TotalTeamScore !== teamstand[positie-1]?.TotalTeamScore">
           {{positie + 1}}
@@ -28,8 +29,8 @@
         <ion-col width-20 *ngIf="line?.TotalTeamScore === teamstand[positie-1]?.TotalTeamScore">
 
         </ion-col>
-        <ion-col width-60>{{line?.Participant.Name}}</ion-col>
-        <ion-col width-20> {{line?.TotalTeamScore}}</ion-col>
+        <ion-col width-60>{{line.Participant.Name}}</ion-col>
+        <ion-col width-20> {{line.TotalTeamScore}}</ion-col>
       </ion-row>
     </ion-item>
   </ion-card>
