--- a/src/pages/totaalstand/totaalstand.html
+++ b/src/pages/totaalstand/totaalstand.html
@@ -17,11 +17,12 @@
         <ion-item color="secondary">
           <ion-row>
             <ion-col width-20>Pos.</ion-col>
-            <ion-col width-60>Naam</ion-col>
-            <ion-col width-20>Punten</ion-col>
+            <ion-col width-50>Naam</ion-col>
+            <ion-col width-30>Punten</ion-col>
           </ion-row>
         </ion-item>
         <ion-item text-wrap *ngFor="let line of totaalstand?.deelnemers" (click)="goToDetails(line)">
+          <ion-icon color="primary" item-right name="ios-arrow-dropright-outline"></ion-icon>
           <ion-row>
             <ion-col width-20>
               <ion-icon color="up" *ngIf="line.Positie < line.previousPositie" ios="md-arrow-up"
