--- a/src/pages/totaalstand-details/totaalstand-details.html
+++ b/src/pages/totaalstand-details/totaalstand-details.html
@@ -43,47 +43,47 @@
         </ion-col>
 
       </ion-row>
-      <ion-row *ngIf="line.showDetails">
+      <ion-row ion-text color="secondary" *ngIf="line.showDetails && line.Played != 0">
         <ion-col width-20></ion-col>
         <ion-col>Gespeeld</ion-col>
         <ion-col width-20> {{line.Played}}</ion-col>
       </ion-row>
-      <ion-row *ngIf="line.showDetails">
+      <ion-row ion-text color="secondary" *ngIf="line.showDetails && line.Won != 0">
         <ion-col width-20></ion-col>
         <ion-col>Gewonnen</ion-col>
         <ion-col width-20> {{line.Won}}</ion-col>
       </ion-row>
-      <ion-row *ngIf="line.showDetails">
+      <ion-row ion-text color="secondary" *ngIf="line.showDetails && line.Draw != 0">
         <ion-col width-20></ion-col>
         <ion-col>Gelijk</ion-col>
         <ion-col width-20> {{line.Draw}}</ion-col>
       </ion-row>
-      <ion-row *ngIf="line.showDetails">
+      <ion-row ion-text color="secondary" *ngIf="line.showDetails && line.CleanSheetScore != 0">
         <ion-col width-20></ion-col>
         <ion-col>De nul</ion-col>
         <ion-col width-20> {{line.CleanSheetScore}}</ion-col>
       </ion-row>
-      <ion-row *ngIf="line.showDetails">
+      <ion-row ion-text color="secondary" *ngIf="line.showDetails && line.Assist != 0">
         <ion-col width-20></ion-col>
         <ion-col>Assist</ion-col>
         <ion-col width-20> {{line.Assist}}</ion-col>
       </ion-row>
-      <ion-row *ngIf="line.showDetails">
+      <ion-row ion-text color="secondary" *ngIf="line.showDetails && line.Goals != 0">
         <ion-col width-20></ion-col>
         <ion-col>Doelpunten</ion-col>
         <ion-col width-20> {{line.Goals}}</ion-col>
       </ion-row>
-      <ion-row *ngIf="line.showDetails">
+      <ion-row ion-text color="secondary" *ngIf="line.showDetails && line.OwnGoals != 0">
         <ion-col width-20></ion-col>
         <ion-col>Eigen goal</ion-col>
         <ion-col width-20> {{line.OwnGoals}}</ion-col>
       </ion-row>
-      <ion-row *ngIf="line.showDetails">
+      <ion-row ion-text color="secondary" *ngIf="line.showDetails && line.YellowCard != 0">
         <ion-col width-20></ion-col>
         <ion-col>Geel</ion-col>
         <ion-col width-20> {{line.YellowCard}}</ion-col>
       </ion-row>
-      <ion-row *ngIf="line.showDetails">
+      <ion-row ion-text color="secondary" *ngIf="line.showDetails && line.RedCard != 0">
         <ion-col width-20></ion-col>
         <ion-col>Rood</ion-col>
         <ion-col width-20> {{line.RedCard}}</ion-col>
