--- a/src/pages/teamstand/teamstand.html
+++ b/src/pages/teamstand/teamstand.html
@@ -1,7 +1,11 @@
 <ion-header>
-  <ion-navbar ion-text color="primary">
-    <ion-title>Teamstand
-    </ion-title>
+  <ion-navbar class="mynavbar" ion-text color="white">
+    <img height="74px" [src]="'assets/icon/logo_white.png'">
+    <ion-buttons end>
+      <button color="secondary" ion-button icon-only (click)="presentPopover($event)">
+        <ion-icon name="menu" ></ion-icon>
+      </button>
+    </ion-buttons>
   </ion-navbar>
 </ion-header>
 
@@ -24,7 +28,7 @@
       </ion-row>
     </ion-item>
     <ion-item color="white" text-wrap *ngFor="let line of teamstand; let positie = index" (click)="goToDetails(line)">
-      <ion-icon color="primary" item-right name="ios-arrow-dropright-outline"></ion-icon>
+      <ion-icon color="secondary" item-right name="ios-arrow-dropright-outline"></ion-icon>
       <ion-row>
         <ion-col width-20 *ngIf="line?.TotalTeamScore !== teamstand[positie-1]?.TotalTeamScore">
           {{positie + 1}}
