--- a/src/pages/totaalstand/totaalstand.html
+++ b/src/pages/totaalstand/totaalstand.html
@@ -20,7 +20,7 @@
     </ion-refresher-content>
   </ion-refresher>
 
-  <ion-card>
+  <ion-card *ngIf="totaalstand">
         <ion-item color="secondary">
           <ion-row>
             <ion-col width-20>Pos.</ion-col>
