--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,13 @@
 
   <link href="build/main.css" rel="stylesheet">
 
+  <script src="https://cdn.auth0.com/w2/auth0-7.6.1.min.js"></script>
+
+  <!-- Auth0 Lock script -->
+  <script src="https://cdn.auth0.com/js/lock/10.8.1/lock.min.js"></script>
+
+  <!-- Setting the right viewport -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 </head>
 <body>
 
