wedstrijden stand gemaakt

--- a/src/pages/dropdownmenu/dropdownmenu.html
+++ b/src/pages/dropdownmenu/dropdownmenu.html
@@ -16,4 +16,10 @@
 
     Totaalstand
   </ion-item>
+  <ion-item (click)="openWedstrijdenstand()">
+    <ion-icon color="secondary" name="stats" item-left></ion-icon>
+    <ion-icon color="secondary" item-right name="ios-arrow-forward-outline"></ion-icon>
+
+    Wedstrijdenstand
+  </ion-item>
 </ion-list>
