vragenstand gemaakt + wijzigingen wedstrijdenstand

--- a/src/pages/dropdownmenu/dropdownmenu.html
+++ b/src/pages/dropdownmenu/dropdownmenu.html
@@ -17,9 +17,15 @@
     Totaalstand
   </ion-item>
   <ion-item (click)="openWedstrijdenstand()">
-    <ion-icon color="secondary" name="stats" item-left></ion-icon>
+    <ion-icon color="secondary" name="podium" item-left></ion-icon>
     <ion-icon color="secondary" item-right name="ios-arrow-forward-outline"></ion-icon>
 
     Wedstrijdenstand
+  </ion-item>
+  <ion-item (click)="openVragenstand()">
+    <ion-icon color="secondary" name="stats" item-left></ion-icon>
+    <ion-icon color="secondary" item-right name="ios-arrow-forward-outline"></ion-icon>
+
+    Vragenstand
   </ion-item>
 </ion-list>
